--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="test1"
+        android:label="Fake Posts"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
